--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -41,9 +41,11 @@ $tertiary: #cfc36f;
     z-index: 3;
 
     .title {
-      font-size: 100px;
+      font-size: 60px;
       transform: scale(0.94);
       animation: scale 3s forwards cubic-bezier(0.5, 1, 0.89, 1);
+      display: flex;
+      flex-direction: column;
     }
 
     @keyframes scale {
@@ -56,6 +58,7 @@ $tertiary: #cfc36f;
       display: inline-block;
       opacity: 0;
       filter: blur(4px);
+      padding-left: 4px;
     }
 
     span:nth-child(1) {
@@ -94,22 +97,6 @@ $tertiary: #cfc36f;
       animation: fade-in 0.8s 0.9s forwards cubic-bezier(0.11, 0, 0.5, 0);
     }
 
-    span:nth-child(10) {
-      animation: fade-in 0.8s 1s forwards cubic-bezier(0.11, 0, 0.5, 0);
-    }
-
-    span:nth-child(11) {
-      animation: fade-in 0.8s 1.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
-    }
-
-    span:nth-child(12) {
-      animation: fade-in 0.8s 1.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
-    }
-
-    span:nth-child(13) {
-      animation: fade-in 0.8s 1.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
-    }
-
     @keyframes fade-in {
       100% {
         opacity: 1;
@@ -118,9 +105,29 @@ $tertiary: #cfc36f;
     }
 
     .subtitle {
-      font-size: 55px;
+      font-size: 30px;
     }
   }
 
+  svg {
+    position: absolute;
+    z-index: 3;
+    top: 30px;
+    right: 30px;
+  }
 
+  @include media-breakpoint-up(lg) {
+    .title-container {
+
+      .title {
+        font-size: 100px;
+        flex-direction: row;
+        gap: 50px;
+      }
+
+      .subtitle {
+        font-size: 55px;
+      }
+    }
+  }
 }
