--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,13 +1,33 @@
 $homepage: url('../assets/images/sfondo.jpg');
 $homepage-vert: url('../assets/images/sfondo-vert.jpg');
 
-$primary: #D8D5F2;
-$secondary: #E8E7EA;
-$tertiary: #cfc36f;
-
 @font-face {
   font-family: 'AlexBrush-Regular';
   src: url('../assets/fonts/AlexBrush-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'CormorantGaramond-Regular';
+  src: url('../assets/fonts/CormorantGaramond-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'Lora-Regular';
+  src: url('../assets/fonts/Lora-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'PlayfairDisplay-Regular';
+  src: url('../assets/fonts/PlayfairDisplay-Regular.ttf');
+}
+
+.bg-overlay {
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+  opacity: 0.6;
+  z-index: 2;
+  position: absolute;
 }
 
 #landing-section {
@@ -17,15 +37,6 @@ $tertiary: #cfc36f;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-
-  .bg-overlay {
-    width: 100vw;
-    height: 100vh;
-    background-color: black;
-    opacity: 0.6;
-    z-index: 2;
-    position: absolute;
-  }
 
   .title-container {
     display: flex;
@@ -136,4 +147,43 @@ $tertiary: #cfc36f;
       }
     }
   }
+}
+
+#invite-section {
+  display: flex;
+  // justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  padding: 0 15px;
+  font-family: 'CormorantGaramond-Regular', serif;
+  width: 100vw;
+  height: 100vh;
+
+  background-image: url('../assets/images/prova2.jpg');
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  .text-container {
+    position: relative;
+    z-index: 3;
+    padding-top: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-direction: column;
+
+    h1 {
+      padding-bottom: 10px;
+      font-weight: bold;
+      font-size: 40px;
+    }
+
+    h3 {
+      font-size: 20px;
+    }
+  }
+
 }
