--- a/src/App.scss
+++ b/src/App.scss
@@ -27,30 +27,33 @@ ul li {
 }
 
 a {
-  text-decoration: none;
+  text-decoration: none !important;
+  color: inherit;
 }
 
 img {
   height: auto;
 }
 
-body::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.9);
-  // border-radius: 10px;
-  background-color: $secondary;
-}
+@include media-breakpoint-up(lg) {
+  body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.9);
+    // border-radius: 10px;
+    background-color: $secondary;
+  }
 
-body::-webkit-scrollbar {
-  width: 12px;
-  background-color: #F5F5F5;
-}
+  body::-webkit-scrollbar {
+    width: 12px;
+    background-color: #F5F5F5;
+  }
 
-body::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  background-color: $primary;
-  background-image: -webkit-linear-gradient(90deg,
-      transparent,
-      rgba(0, 0, 0, 0.4) 50%,
-      transparent,
-      transparent)
+  body::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: $primary;
+    background-image: -webkit-linear-gradient(90deg,
+        transparent,
+        rgba(0, 0, 0, 0.4) 50%,
+        transparent,
+        transparent)
+  }
 }
