--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,6 +1,7 @@
 $homepage: url('../assets/images/sfondo.jpg');
 $homepage-vert: url('../assets/images/sfondo-vert.jpg');
 $carta: url('../assets/images/carta.jpg');
+$safari: url('../assets/images/safari.jpg');
 
 @font-face {
   font-family: 'AlexBrush-Regular';
@@ -323,36 +324,119 @@ body {
 
     }
 
-    h3 {
-      font-size: 20px;
-      font-weight: bold;
-    }
-
-    img {
-      width: 150px;
-      height: 150px;
-      float: left;
-      margin: 0 15px 0 0;
-      object-fit: cover;
-    }
-
     li {
       padding: 10px;
       overflow: auto;
       color: $primary;
       width: 100%;
 
+      h3 {
+        font-size: 20px;
+        font-weight: bold;
+      }
+
+      img {
+        width: 150px;
+        height: 150px;
+        float: left;
+        margin: 0 15px 0 0;
+        object-fit: cover;
+      }
+
       p {
         font-size: 15px;
         line-height: 20px;
       }
-
-
     }
 
     li:hover {
       background: darken($secondary, 20%);
       cursor: pointer;
+    }
+  }
+
+  @include media-breakpoint-up(lg) {
+    h1 {
+      font-size: 70px;
+    }
+
+    .accomodation-box {
+      .description {
+        font-size: 25px;
+        text-align: center;
+      }
+
+      ul {
+        margin: 20px 5vw;
+      }
+
+      li {
+
+        img {
+          width: 200px;
+          height: 200px;
+        }
+
+        h3 {
+          font-size: 25px;
+        }
+
+        p {
+          font-size: 20px;
+        }
+      }
+
+    }
+  }
+}
+
+#travel-section {
+  width: 100vw;
+  background-image: $safari;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding: 30px 10px;
+  box-shadow: 1px 1px 10px rgba(49, 47, 46, 0.5);
+  display: flex;
+  // justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+
+  h1 {
+    font-size: 45px;
+    text-align: center;
+    font-family: $primary-font, serif;
+    color: $secondary;
+    text-shadow: 1px 1px 2px black;
+  }
+
+  .card {
+    padding: 20px;
+    background-color: rgb(0, 0, 0, 0.7);
+    color: white;
+    border-radius: 20px;
+    font-family: $secondary-font, serif;
+    font-size: 22px;
+    text-align: center;
+  }
+
+  @include media-breakpoint-up(lg) {
+    background-position: bottom;
+    height: 60vh;
+    gap: 10%;
+
+    h1 {
+      font-size: 70px;
+    }
+
+    .card {
+      margin: 0 10vw;
+
+      p {
+        font-size: 25px;
+      }
     }
   }
 }
