add control panel + login + insert

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
 @import "./styles/home.scss";
 @import "./styles/map.scss";
 @import "./styles/header.scss";
+@import "./styles/admin.scss";
 
 /* reset */
 * {
