--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,7 +1,7 @@
 $homepage: url('../assets/images/sfondo.jpg');
 $homepage-vert: url('../assets/images/sfondo-vert.jpg');
 $carta: url('../assets/images/carta.jpg');
-$safari: url('../assets/images/safari.jpg');
+$safari: url('../assets/images/tramontobw2.jpg');
 $invito: url('../assets/images/fiori.png');
 
 @font-face {
@@ -182,22 +182,13 @@ body {
   padding: 0 15px;
   font-family: $secondary-font, serif;
   width: 100vw;
-  height: 80vh;
+  height: 65vh;
 
   background-image: $invito;
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
   box-shadow: 1px 1px 10px rgba(49, 47, 46, 0.5);
-
-  .bg-overlay {
-    width: 100vw;
-    height: 100vh;
-    // background-color: white;
-    opacity: 0.4;
-    z-index: 2;
-    position: absolute;
-  }
 
   .text-container {
     position: relative;
@@ -214,13 +205,31 @@ body {
     h1 {
       padding-bottom: 10px;
       font-weight: bold;
-      font-size: 40px;
+      font-size: 45px;
       letter-spacing: 4px;
       font-family: $primary-font;
+    }
+
+    .invite-subtitle {
+      font-size: 18px;
+      width: 65%;
+      margin-left: 30%;
     }
   }
 
   @include media-breakpoint-up(lg) {
+    height: 100vh;
+    background-position: bottom center;
+
+    .bg-overlay {
+      width: 100vw;
+      height: 100vh;
+      background-color: white;
+      opacity: 0.4;
+      z-index: 2;
+      position: absolute;
+    }
+
     .text-container {
       gap: 35px;
 
@@ -228,8 +237,10 @@ body {
         font-size: 70px;
       }
 
-      h2 {
+      .invite-subtitle {
         font-size: 35px;
+        width: 80%;
+        margin-left: 0;
       }
     }
   }
@@ -413,14 +424,15 @@ body {
     text-shadow: 1px 1px 2px black;
   }
 
-  .card {
+  .travel-card {
     padding: 20px;
-    background-color: rgb(0, 0, 0, 0.7);
+    background-color: transparent;
     color: white;
-    border-radius: 20px;
+    // border-radius: 20px;
     font-family: $secondary-font, serif;
     font-size: 22px;
     text-align: center;
+    text-shadow: 1px 1px 2px black;
   }
 
   @include media-breakpoint-up(lg) {
