--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -182,7 +182,7 @@ body {
   padding: 0 15px;
   font-family: $secondary-font, serif;
   width: 100vw;
-  height: 65vh;
+  height: 500px;
 
   background-image: $invito;
   background-position: bottom;
